--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<!-- <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
@@ -17,4 +17,242 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
+ -->
 
+<header>    
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="navigation">
+        <div class="container">         
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse.collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <div class="navbar-brand">
+              <a href="index.html"><h1><span><img src="../assets/images/logo.png" width="100" height="50" alt="Soliho Public Afairs"></span></h1></a>
+            </div>
+          </div>
+          
+          <div class="navbar-collapse collapse">              
+            <div class="menu">
+              <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation"><a href="index.html" class="active">Home</a></li>
+                <li role="presentation"><a href="#about">About Us</a></li>
+                <li role="presentation"><a href="#services">Services</a></li>               
+                <li role="presentation"><a href="#conatcat-info">Contact</a></li>   
+                <li role="presentation" class="dropdown">
+                  <a data-toggle="dropdown">African Institutions
+                  <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="http://www.maghrebarabe.org/en/" target="_blank">Arab Maghreb Union (UMA)</a></li>
+                    <li><a href="http://www.comesa.int/" target="_blank">Common Market for Eastern and Southern Africa (COMESA)</a></li>
+                    <li><a href="http://www.censad.org/" target="_blank">Community of Sahel-Saharan States (CEN-SAD)</a></li>
+                    <li><a href="https://www.eac.int/" target="_blank">East African Community (EAC)</a></li>
+                    <li><a href="http://www.ceeac-eccas.org" target="_blank"> Economic Community of Central African States (ECCAS)</a></li>
+                    <li><a href="http://www.ecowas.int/" target="_blank">Economic Community of West African States (ECOWAS)</a></li>
+                    <li><a href="https://igad.int/" target="_blank">Intergovernmental Authority on Development (IGAD)</a></li>
+                    <li><a href="http://www.sadc.int/" target="_blank">Southern African Development Community (SADC)</a></li>
+                  </ul>
+                </li>
+                <li role="presentation" class="dropdown">
+                  <a data-toggle="dropdown">Other Institutions
+                  <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="">European Institutions</a></li>
+                    <li class="divider"></li>
+                    <li><a href="http://www.europarl.europa.eu/portal/en" target="_blank"> European Parliament</a></li>
+                    <li><a href="http://www.consilium.europa.eu/en/european-council/" target="_blank">European Council</a></li>
+                    <li><a href="http://www.consilium.europa.eu/en/council-eu/" target="_blank">Council of the European Union</a></li>
+                    <li><a href="https://ec.europa.eu/commission/index_en" target="_blank">European Commission</a></li>
+                    <li><a href="https://curia.europa.eu/jcms/jcms/j_6/en/" target="_blank">Court of Justice of the European Union (CJEU)</a></li>
+                    <li><a href="https://www.ecb.europa.eu/home/html/index.en.html" target="_blank">European Central Bank (ECB)</a></li>
+                    <li><a href="https://www.eca.europa.eu/en/Pages/ecadefault.aspx" target="_blank">European Court of Auditors</a></li>
+                    <li><a href="https://eeas.europa.eu/headquarters/headquarters-homepage_en" target="_blank">European External Action Service (EEAS)</a></li>
+                    <li><a href="http://www.eesc.europa.eu/" target="_blank">European Economic and Social Committee (EESC)</a></li>
+                    <li><a href="http://cor.europa.eu/Pages/welcome.html" target="_blank">European Committee of the Regions (CoR)</a></li>
+                    <li><a href="http://www.eib.org/" target="_blank">European Investment Bank (EIB)</a></li>
+                    <li><a href="https://www.ombudsman.europa.eu/home.faces" target="_blank">European Ombudsman</a></li>
+                    <li><a href="https://edps.europa.eu/" target="_blank">European Data Protection Supervisor</a></li>
+                    <li><a href="">Inter-institutional services  </a></li>
+                    <li class="divider"></li>
+                    <li><a href="">International Institutions</a></li>
+                    <li class="divider"></li>
+                  </ul>
+                </li>               
+              </ul>
+            </div>
+          </div>            
+        </div>
+      </div>  
+    </nav>    
+  </header>
+  
+  <section id="main-slider" class="no-margin">
+        <div class="carousel slide">      
+            <div class="carousel-inner">
+                <div class="item active" style="background-image: url(../assets/images/slider/bg1.png)">
+                    <div class="container">
+                        <div class="row slide-margin">
+                            <div class="col-sm-6">
+                                <div class="carousel-content">
+                                    <h2 class="animation animated-item-1">SOLIHO <br> <span><blockquote>The way of the future</blockquote></span></h2>
+                                    <p class="animation animated-item-2">
+                    " Contribute to the development of Africa by echoing its own solutions and facilitating exchanges and 
+                    feedback with the rest of the world! "
+                  </p>
+                                </div>
+                            </div>
+
+                           <!--  <div class="col-sm-6 hidden-xs animation animated-item-4">
+                                <div class="slider-img">
+                                    <img src="images/slider/img3.png" class="img-responsive">
+                                </div>
+                            </div> -->
+
+                        </div>
+                    </div>
+                </div><!--/.item-->             
+            </div><!--/.carousel-inner-->
+        </div><!--/.carousel-->
+    </section><!--/#main-slider-->
+  
+  <div class="feature" id="services">
+    <div class="container">
+      <div class="text-center">
+        <div class="col-md-3">
+          <div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" >
+            <i class="fa fa-arrows"></i>  
+            <h2>Advice</h2>
+            <p>Advice to companies wishing to establish themselves in Africa or those already there who wish to come investing in France or in Europe.</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" >
+            <i class="fa fa-book"></i>  
+            <h2>Conducting Studies</h2>
+            <p>Realization of studies on various subjects insofar as SOLIHO has a portfolio of high-level African and non-African experts.</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" >
+            <i class="fa fa-gear"></i>  
+            <h2>Training</h2>
+            <p>Training of elected representatives and/or of political and administrative leaders in Africa.</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" >
+            <i class="fa fa-money"></i> 
+            <h2> Lobbying</h2>
+            <p>Search for financing - Lobbying.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="about" id="about">
+    <div class="container">
+<!--      <div class="col-sm-12">
+        <h2 class="text-center">About us</h2>
+      </div> -->
+      <div class="col-md-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" >
+        
+        <img src="../assets/images/6.png" class="img-responsive"/>
+      </div>
+      
+      <div class="col-md-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" >
+        <p>SOLIHO Public Affairs is a Paris-based firm that is found in 2017 by <a href="https://www.linkedin.com/in/li%C3%A9vin-feliho-6a935411a/"><b>Liévin FELIHO</b></a>.
+        </p>
+        <p>We mainly work on Africa but we can also reflect on development issues that concern other continents.</p>
+        <p>SOLIHO Public Affairs offers advice and give guidance to its clients by helping them to improve the success of companies interactions with their environment and develop their activities.</p>
+      </div>
+    </div>
+  </div>
+
+  <section id="partner">
+        <div class="container">
+            <div class="center wow fadeInDown">
+                <h2>CEO</h2>
+            </div>    
+
+            <div class="partners">
+                <ul>
+                    <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1500ms" src="../assets/images/partners/partner9.png"></a></li>
+                </ul>
+      </div>
+      <div class="center wow fadeInDown">
+                <p><b>Liévin FELIHO...</b> Interested in issues related to social protection (social security, training, etc.), but also in terms of development issues concerning Africa, in particular environmental issues.</p>
+                <p>Also founder of the think tank <a href="http://www.cherpaa.org/">CHERPAA</a>, run this organization which has a network on the African continent and in its different subregions.</p>
+            </div>         
+        </div><!--/.container-->
+    </section>
+  
+  <section id="conatcat-info">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="media contact-info wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                        <div class="pull-left">
+                            <i class="fa fa-phone"></i>
+                        </div>
+                        <div class="media-body">
+                            <h3>Have a question or need to contact us.</h3>
+                            <h5>Email: lievin.feliho@soliho.com</h5>
+                            <h5>Address: 68,rue Sebastien Mercier F-75015 Paris.</h5>
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                  <div>
+                      <form action="">
+                        <div class="form-group">
+                          <input type="name" placeholder="Name" class="form-control" id="name">
+                        </div>
+                        <div class="form-group">
+                          <input type="email" placeholder="Email" class="form-control" id="name">
+                        </div>
+                        <div class="form-group">
+                          <textarea placeholder="Content" class="form-control" rows="3" id="content"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Send</button>
+                      </form>
+                  </div>
+                </div>
+            </div>
+        </div><!--/.container-->    
+    </section><!--/#conatcat-info-->
+  
+  <footer>
+    <div class="footer">
+      <div class="container">
+        <div class="social-icon">
+          <div class="col-md-4">
+            <ul class="social-network">
+              <li><a href="#" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="#" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="#" class="gplus tool-tip" title="Google Plus"><i class="fa fa-google-plus"></i></a></li>
+              <li><a href="#" class="linkedin tool-tip" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="#" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
+            </ul> 
+          </div>
+        </div>
+        
+        <div class="col-md-4 col-md-offset-4">
+          <div class="copyright">
+            &copy; iCog-Labs. All Rights Reserved.
+                        <div class="credits">
+              2017
+                        </div>
+          </div>
+        </div>            
+      </div>
+      
+      <div class="pull-right">
+        <a href="#home" class="scrollup"><i class="fa fa-angle-up fa-3x"></i></a>
+      </div>    
+    </div>
+  </footer>
