--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -36,7 +36,7 @@ a {
 }
 a:hover {
 	text-decoration: none;
-	color:#eee;	
+	color:#eee;
 	}
 
 .btn-primary {
@@ -47,7 +47,7 @@ a:hover {
   border:none;
   margin-top: 10px;
 }
-	
+
 .text-center h2 {
 	margin-bottom:30px;
 }
@@ -72,7 +72,7 @@ a:hover {
 	margin-top: -20px;
 }
 
-.breadcrumb { 
+.breadcrumb {
   list-style: none;
   background-color: #710F17;
   border-radius: 0px;
@@ -96,9 +96,9 @@ a:hover {
 .navbar-brand h1 {
 	margin-top:9px;
 	padding-top:5px;
-	float: left;	
-	font-size: 25px;	
-	color:#333;	
+	float: left;
+	font-size: 25px;
+	color:#333;
 	text-transform:uppercase;
 	font-weight:900;
 }
@@ -110,11 +110,11 @@ a:hover {
 	font-size:12px;
 	float:right;
 	text-transform:uppercase;
-	font-weight:700;	
+	font-weight:700;
 }
 
 .menu ul.nav-tabs li {
-	color:#000;	
+	color:#000;
 }
 
 .nav-tabs {
@@ -124,17 +124,17 @@ a:hover {
 	float: left;
 	margin-bottom: 0;
 }
-.nav-tabs > li > a {	
+.nav-tabs > li > a {
 	border-radius:0;
 	color:#333;
 	padding:30px;
 }
 
-.nav-tabs > li > a:hover {	
+.nav-tabs > li > a:hover {
 	color: #710F17;
 	border-color: #fff #fff #fff;
 	border-radius:0;
-	background-color:#fff; 
+	background-color:#fff;
 	transition: all 0.3s ease-in-out;
 	-moz-transition: all 0.3s ease-in-out;
 	-webkit-transition: all 0.3s ease-in-out;
@@ -323,7 +323,7 @@ a:hover {
 #partner p {
   color: #fff;
   font-size:20px;
-  
+
 }
 
 .partners ul {
@@ -416,7 +416,7 @@ a:hover {
   background: #db3615;
 }
 
-.progress, 
+.progress,
 .progress-bar {
   height: 15px;
   line-height: 15px;
@@ -536,7 +536,7 @@ a:hover {
 
 ul.social-network {
 	list-style:none;
-	margin-top:20px;	
+	margin-top:20px;
 	padding:10px;
 	transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -546,12 +546,12 @@ ul.social-network {
 
 ul.social-network li {
 	display:inline;
-	margin: 0 18px;	
-	font-size:25px;	
+	margin: 0 18px;
+	font-size:25px;
 }
 
-ul.social-network li a {	
-	color:#d0d0d0;	
+ul.social-network li a {
+	color:#d0d0d0;
 }
 .social-network li:hover .fa-twitter {
   color: #00abf0;
@@ -563,19 +563,19 @@ ul.social-network li a {
   color: #eb8984;
 }
 .social-network li:hover .fa-pinterest {
-  color: #c9171e; 
+  color: #c9171e;
 }
 .social-network li:hover .fa-linkedin {
-  color: #0077b5; 
+  color: #0077b5;
 }
 .social-network li:hover .fa-youtube-play {
-  color: #C84941; 
+  color: #C84941;
 }
 .social-network li:hover .fa-dribbble {
-  color: #EA4C89 ; 
+  color: #EA4C89 ;
 }
 .social-network li:hover .fa-pinterest-square {
-  color: #EA4B49; 
+  color: #EA4B49;
 }
 
 .copyright {
@@ -593,6 +593,8 @@ ul.social-network li a {
 /* --- services --- */
 .services {
 	padding:50px;
+  margin-top: 4em;
+  background-color: rgba(197, 196, 196, 0.47);
 }
 
 .services h3 {
@@ -650,7 +652,7 @@ ul.social-network li a {
 	font-size:18px;
 }
 
-.portfolio-items, 
+.portfolio-items,
 .portfolio-filter {
   list-style: none outside none;
   margin: 0 0 40px 0;
@@ -1036,7 +1038,7 @@ ul.pagination > li > a i{
   margin-right:5px;
 }
 
-ul.pagination > li.active > a, 
+ul.pagination > li.active > a,
 ul.pagination > li:hover > a {
   background-color: #710F17 !important;
   border-color: #710F17 !important;
@@ -1057,7 +1059,7 @@ ul.pagination > li:hover > a {
   outline: 0 none;
 }
 
-ul.tag-cloud, 
+ul.tag-cloud,
 ul.sidebar-gallery {
   list-style: none;
   padding: 0;
@@ -1079,7 +1081,7 @@ ul.sidebar-gallery {
 
 .tag-cloud li a:hover{
   background:#710F17;
-  color: #fff;  
+  color: #fff;
 }
 
 .sidebar-gallery li{
@@ -1099,7 +1101,7 @@ ul.sidebar-gallery {
   margin-bottom:50px;
 }
 
-#contact-page .contact-form 
+#contact-page .contact-form
 .form-group label {
   color: #4E4E4E;
   font-size: 14px;
@@ -1174,7 +1176,7 @@ a.scrollup{
 	text-decoration:none;
 	position:fixed;
 	bottom:30px;
-	right:40px;	
+	right:40px;
 	opacity:0,5;
 	border-radius:50%;
 	z-index:999;
@@ -1200,4 +1202,22 @@ body > header > nav > div {
 
 body > header > nav > div > div > div.navbar-collapse.collapse > div > ul > li:nth-child(n){
   cursor: pointer;
+}
+
+#logo {
+  padding-bottom: .5em;
+}
+
+.lists {
+  color: #333;
+}
+
+.lists > span > i {
+  color: #710F17;
+  font-size: .7em;
+  padding: 1.5em;
+}
+
+#financing {
+  margin-top: 0;
 }
